--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -9,7 +9,7 @@ project(stm32-template C ASM)
 
 set(OUTPUT_PATH "/output")
 
-set(HAL_COMP_LIST RCC GPIO CORTEX STM32F3)
+set(HAL_COMP_LIST RCC GPIO CORTEX DMA UART STM32F3)
 set(CMSIS_COMP_LIST "")
 
 ####################################
@@ -26,6 +26,7 @@ find_package(HAL   COMPONENTS "${HAL_COMP_LIST}"   REQUIRED)
 set(PROJECT_SOURCES
 	${CMAKE_CURRENT_SOURCE_DIR}/src/io/clock.c
 	${CMAKE_CURRENT_SOURCE_DIR}/src/io/gpio.c
+	${CMAKE_CURRENT_SOURCE_DIR}/src/io/uart.c
 
 	${CMAKE_CURRENT_SOURCE_DIR}/src/func/error.c
 
@@ -57,8 +58,10 @@ set(CMSIS_SOURCES
 target_link_libraries( stm32-template
 	HAL::STM32::F3::CORTEX
 	HAL::STM32::F3::RCC
+	HAL::STM32::F3::DMA
 	HAL::STM32::F3::RCCEx
 	HAL::STM32::F3::GPIO
+	HAL::STM32::F3::UART
 	CMSIS::STM32::F302xC
 	STM32::NoSys
 )
