--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "stm32-cmake"]
-	path = project/stm32-cmake
+	path = project/ext/stm32-cmake
 	url = https://github.com/ObKo/stm32-cmake.git
 [submodule "STM32CubeF3"]
-	path = project/STM32CubeF3
+	path = project/ext/STM32CubeF3
 	url = https://github.com/STMicroelectronics/STM32CubeF3.git
+[submodule "project/ext/printf"]
+	path = project/ext/printf
+	url = https://github.com/eyalroz/printf
