--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "stm32-cmake"]
+[submodule "project/ext/stm32-cmake"]
 	path = project/ext/stm32-cmake
 	url = https://github.com/ObKo/stm32-cmake.git
-[submodule "STM32CubeF3"]
+[submodule "project/ext/STM32CubeF3"]
 	path = project/ext/STM32CubeF3
 	url = https://github.com/STMicroelectronics/STM32CubeF3.git
 [submodule "project/ext/printf"]
