Make the analog comparator work

--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -10,7 +10,7 @@ project(stm32-template C ASM)
 set(OUTPUT_PATH "/output")
 set(CMAKE_C_FLAGS "-O3")
 
-set(HAL_COMP_LIST RCC GPIO CORTEX DMA UART TIM STM32F3)
+set(HAL_COMP_LIST RCC GPIO CORTEX DMA UART TIM "COMP" STM32F3)
 set(CMSIS_COMP_LIST "")
 
 ## Printf package config
@@ -48,6 +48,7 @@ set(PROJECT_SOURCES
 	${CMAKE_CURRENT_SOURCE_DIR}/src/io/clock.c
 	${CMAKE_CURRENT_SOURCE_DIR}/src/io/gpio.c
 	${CMAKE_CURRENT_SOURCE_DIR}/src/io/uart.c
+	${CMAKE_CURRENT_SOURCE_DIR}/src/io/acomp.c
 	${CMAKE_CURRENT_SOURCE_DIR}/src/io/pwm.c
 	${CMAKE_CURRENT_SOURCE_DIR}/src/io/freqmeter.c
 
@@ -96,6 +97,7 @@ target_link_libraries( stm32-template
 	HAL::STM32::F3::RCCEx
 	HAL::STM32::F3::GPIO
 	HAL::STM32::F3::UART
+	"HAL::STM32::F3::COMP"
 	HAL::STM32::F3::TIM
 	HAL::STM32::F3::TIMEx
 	CMSIS::STM32::F302xC
